Repair Shop loads volvo and lowerBed liftBed